samples/_failures_safe/1761185582_ffc98a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7caaa6a6.c: In function ‘main’:
./samples/SAFE/__tmp_7caaa6a6.c:146:5: error: expected expression at end of input
  146 |     printf("Compressed size: %zu bytes\n",
      |     ^~~~~~
./samples/SAFE/__tmp_7caaa6a6.c:146:5: error: expected declaration or statement at end of input
